infra/policies/kyverno-verify-image.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-signed-images
spec:
  validationFailureAction: enforce
  background: false
  rules:
    - name: require-cosign-signature
      match:
        resources:
          kinds: ["Pod"]
      verifyImages:
        - imageReferences: ["ghcr.io/trojan3877/transformerforge:*"]
          attestors:
            - entries:
                - keyless:
                    subject: "mailto:coreyleath10@gmail.com"
                    issuer: "https://token.actions.githubusercontent.com"
